  Add accelerator keys for Shell context menu (#2823536)
  Improve editing of linefilter regular expressions (#3015416)
  Allow editing context line count in patch creator (#2092180)
  Improve color options organization (#2818451)
  Add /xq command line switch for closing WinMerge after identical files
    and not showing message (#2827836)
  Allow setting codepage from command line (#2725549)
  Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
    in status bar (#3025855)
  Bugfix: Pane headers not updated after language change (#2923684)
  Bugfix: Quick contents compare didn't ignore EOL byte differences (#2929005)
  Bugfix: Compare by size always checked file times too (#2919510)
  Bugfix: Crash when pasting from clipboard (#3109525)
  Bugfix: Keeps verifing path even turned off in options (#3111581)
  Bugfix: Crash after deleting text (#3109521)
  Bugfix: Added EOL chars between copied file/path names (#2817546)
  Bugfix: Created new matching folder to wrong folder (#2890961)
  Bugfix: Strange scrolling effect in location pane (#2942869)
  Bugfix: Plugin error after interrupting folder compare (#2919475)

WinMerge 2.13.20 - 2010-10-20 (r7319)
  Add missing keywords to Pascal highlighter (#2834192)
  Recognize .ascx files as ASP files (#3042393)
  Fix help locations (#2988974)
  Show only "Copy to other side" item in file compare
    context menu (#2600787)
  Expand/collapse folders from keyboard (#2203904)
  Improve detecting XML files in file compare (#2726531)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  New translation: Persian (#2877121, #3065119)
  New translation: Serbian (#3017674, #3065119)
  Installer: Drop Windows 9x/ME/NT4 support and use Microsoft runtime
    libraries installer (#3070254)
  Installer: Remove Uninstall shortcut from start menu folder (#3076909)
  Installer: Don't install quick launch icon for Windows 7 (#3079966)