@@ -33,6 +33,7 @@
 #include "OptionsDef.h"
 #include "OptionsMgr.h"
 #include "OptionsPanel.h"
+#include "charsets.h"
 
 #ifdef _DEBUG
 #define new DEBUG_NEW
@@ -53,7 +54,7 @@ void PropCodepage::DoDataExchange(CDataExchange* pDX)
 	CPropertyPage::DoDataExchange(pDX);
 	//{{AFX_DATA_MAP(PropCodepage)
 	DDX_Radio(pDX, IDC_CP_SYSTEM, m_nCodepageSystem);
-	DDX_Text(pDX, IDC_CUSTOM_CP_NUMBER, m_nCustomCodepageValue);
+	DDX_Text(pDX, IDC_CUSTOM_CP_NUMBER, m_cCustomCodepageValue);
 	DDX_Check(pDX, IDC_DETECT_CODEPAGE, m_bDetectCodepage);
 	//}}AFX_DATA_MAP
 }
@@ -74,6 +75,7 @@ void PropCodepage::ReadOptions()
 {
 	m_nCodepageSystem = GetOptionsMgr()->GetInt(OPT_CP_DEFAULT_MODE);
 	m_nCustomCodepageValue = GetOptionsMgr()->GetInt(OPT_CP_DEFAULT_CUSTOM);
+	m_cCustomCodepageValue.Format(_T("%d"),m_nCustomCodepageValue);
 	m_bDetectCodepage = GetOptionsMgr()->GetBool(OPT_CP_DETECT);
 }
 
@@ -83,6 +85,7 @@ void PropCodepage::ReadOptions()
 void PropCodepage::WriteOptions()
 {
 	GetOptionsMgr()->SaveOption(OPT_CP_DEFAULT_MODE, (int)m_nCodepageSystem);
+	GetEncodingCodePageFromNameString();
 	GetOptionsMgr()->SaveOption(OPT_CP_DEFAULT_CUSTOM, (int)m_nCustomCodepageValue);
 	GetOptionsMgr()->SaveOption(OPT_CP_DETECT, m_bDetectCodepage == TRUE);
 }
@@ -117,4 +120,21 @@ void PropCodepage::OnCpCustom()
 void PropCodepage::OnCpUi() 
 {
 	GetDlgItem(IDC_CUSTOM_CP_NUMBER)->EnableWindow(FALSE);	
+}
+
+void PropCodepage::GetEncodingCodePageFromNameString()
+{
+	int nCustomCodepageValue = _ttol(m_cCustomCodepageValue);
+	if (nCustomCodepageValue == 0)
+	{
+		char *result= new char[80]; 
+		long len = wcslen(m_cCustomCodepageValue); 
+		_wcstombsz(result, m_cCustomCodepageValue, len); //conversion to char * 
+		result[len] = '\0'; //don't forget to put the caracter of terminated string 
+		nCustomCodepageValue = GetEncodingCodePageFromName(result);
+		delete [] result;
+	}
+	//if found a new codepage valid
+	if (nCustomCodepageValue)
+		m_nCustomCodepageValue = nCustomCodepageValue;
 }
